# template-pw

./: .env.example  .gitignore  conftest.py  index.html  main.py  pyproject.toml  readme.md
.github/workflows/: playwright.yml
4/: index.html
4/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
4/data/test-cases/: b01bd5d5ee6540ea.json
4/export/: influxDbData.txt  prometheusData.txt
4/history/: categories-trend.json  history-trend.json  history.json
4/widgets/: duration-trend.json  duration.json  executors.json  summary.json
5/: index.html
5/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
5/data/test-cases/: 11ad359d2530d263.json  4c1428a67ddd0d80.json  743aec95a526d2b3.json  c6d6245ac4f591c6.json  e1dd164ddadfea5a.json
5/export/: influxDbData.txt  prometheusData.txt
5/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
5/widgets/: categories-trend.json  duration.json  executors.json  severity.json  summary.json
6/: index.html
6/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
6/export/: influxDbData.txt  prometheusData.txt
6/history/: history-trend.json  history.json
6/widgets/: behaviors.json  categories-trend.json  duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
last-history/: retry-trend.json
pages/login/: exemple_base.py  login.py
tests/: test_exemple.py  test_login.py
utils/: config.py  faker_data.py
(+5 files in other folders)
